Bug 322849 - kdevelop code completion doesn't work with dark color scheme
Summary: kdevelop code completion doesn't work with dark color scheme
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL: http://wstaw.org/m/2013/07/26/plasma-...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-26 16:08 UTC by Weng Xuetian
Modified: 2013-10-22 10:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
colorscheme (2.27 KB, application/octet-stream)
2013-10-20 20:03 UTC, Weng Xuetian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2013-07-26 16:08:49 UTC
When using dark window background color and white text background color, the code completion combobox will be unusable due to the color.

Reproducible: Always

Steps to Reproduce:
1. using code scheme here: http://paste.chakra-project.org/4900/
2. type in kdevelop to enable code completion
Actual Results:  
Text in code completion combobox is white while the background is also bright.

Expected Results:  
the text should be dark.
Comment 1 Kevin Funk 2013-10-02 23:20:24 UTC
Milian is using a dark scheme, he will know how to work-around/fix this.
Comment 2 Milian Wolff 2013-10-19 22:21:08 UTC
Jup and it works just fine for me. Can you paste your color scheme here? And also please attach a screenshot.

Can you also test it with the default obsidian cost theme? That's what I use and that works nicely?
Comment 3 Weng Xuetian 2013-10-20 20:03:17 UTC
Created attachment 82979 [details]
colorscheme

my color scheme, difference between obsidian it's using white as "view background".
Comment 4 Weng Xuetian 2013-10-20 20:04:16 UTC
screen shot is in the URL section of report, which is http://wstaw.org/m/2013/07/26/plasma-desktopZzg515.png
Comment 5 Milian Wolff 2013-10-21 17:56:53 UTC
This also happens in "pure" Kate though, no? Or is it showing fine there?
Comment 6 Milian Wolff 2013-10-21 17:57:46 UTC
Confirming, as someone else said he could reproduce this issue with the supplied color scheme. Probably an issue in Kate where the wrong combination of colors is used (e.g. view foreground and window background or vice versa).
Comment 7 Milian Wolff 2013-10-22 10:53:02 UTC
Git commit e3d4bccf19af120b92157fa53fbe0f0de8761e9b by Milian Wolff, on behalf of Juliano F. Ravasi.
Committed on 22/10/2013 at 10:45.
Pushed by mwolff into branch 'master'.

Use base color for completion list background.

Fixes unreadable text in completion list with certain color schemes.
REVIEW: 113379

M  +1    -1    part/completion/expandingtree/expandingdelegate.cpp

http://commits.kde.org/kate/e3d4bccf19af120b92157fa53fbe0f0de8761e9b