Use base color for completion list background.

Fixes unreadable text in completion list with certain color schemes.

BUG: 322849
REVIEW: 113379